[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/gold-bar.png" type="Texture" id=1]
[ext_resource path="res://sprites/globe.png" type="Texture" id=2]
[ext_resource path="res://sprites/pay-money.png" type="Texture" id=3]
[ext_resource path="res://buff.gd" type="Script" id=4]

[node name="buff" type="Node2D"]
script = ExtResource( 4 )

[node name="buff_single" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="buff_global" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="delay_inevitable" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
